--- a/AcademicReward/AcademicReward.csproj
+++ b/AcademicReward/AcademicReward.csproj
@@ -40,11 +40,11 @@
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
-		<MauiImage Include="Resources\Images\home.png" Color="Black"/>
-		<MauiImage Include="Resources\Images\plus.png" Color="Black"/>
-		<MauiImage Include="Resources\Images\bell.png" Color="Black"/>
-		<MauiImage Include="Resources\Images\shop.png" Color="Black"/>
-		<MauiImage Include="Resources\Images\profile.png" Color="Black"/>
+		<MauiImage Include="Resources\Images\home.png" Color="Black" />
+		<MauiImage Include="Resources\Images\plus.png" Color="Black" />
+		<MauiImage Include="Resources\Images\bell.png" Color="Black" />
+		<MauiImage Include="Resources\Images\shop.png" Color="Black" />
+		<MauiImage Include="Resources\Images\profile.png" Color="Black" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -54,13 +54,33 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\shirt.png" />
+	  <None Remove="Resources\Images\ShopDemoTicket.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
 	  <PackageReference Include="Npgsql" Version="6.0.7" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="AddShopItemPage.xaml.cs">
+	    <DependentUpon>AddShopItemPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\ViewShopItemPage.xaml.cs">
+	    <DependentUpon>ViewShopItemPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="AddShopItemPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="PopUps\LoginPopUp.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ViewShopItemPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\LoginPage.xaml">
